--- a/src/app/pages/roleplay/creation/creation.component.html
+++ b/src/app/pages/roleplay/creation/creation.component.html
@@ -359,7 +359,7 @@
       <tbody>
         <tr>
           <td>0 point</td>
-          <td>Instantannée</td>
+          <td>Instantanée</td>
           <td>Personnelle</td>
         </tr>
         <tr>
@@ -420,13 +420,18 @@
           </div>
         </td>
         <td>
-          <input [ngClass]="{ warning: crystal.level > crystal.levelmax }" type="number" min="1" value="{{ crystal.level }}" (change)="changeCrystalLevel(index, $event.target)" />
+          <input
+            [ngClass]="{ warning: crystal.levelmax ? crystal.level > crystal.levelmax : false }"
+            type="number"
+            min="1"
+            value="{{ crystal.level }}"
+            (change)="changeCrystalLevel(index, $event.target)"
+          />
         </td>
         <td>
           <div class="dropdown">
             <select class="dropdown-select" value="{{ crystal.target }}" (change)="changeCrystalTarget(index, $event.target)">
-              <option value=""></option>
-              <option value="0">Instantannée</option>
+              <option value="0">Instantanée</option>
               <option value="1">Une scène</option>
               <option value="2">Une journée</option>
               <option value="3">Illimitée</option>
@@ -436,7 +441,6 @@
         <td>
           <div class="dropdown">
             <select class="dropdown-select" value="{{ crystal.time }}" (change)="changeCrystalTime(index, $event.target)">
-              <option value=""></option>
               <option value="0">Personnelle</option>
               <option value="1">Toucher</option>
               <option value="2">A vue</option>
@@ -499,7 +503,13 @@
           </div>
         </td>
         <td>
-          <input [ngClass]="{ warning: crystal.level > crystal.levelmax }" type="number" min="1" value="{{ crystal.level }}" (change)="changeCrystalLevel(index, $event.target)" />
+          <input
+            [ngClass]="{ warning: crystal.levelmax ? crystal.level > crystal.levelmax : false }"
+            type="number"
+            min="1"
+            value="{{ crystal.level }}"
+            (change)="changeCrystalLevel(index, $event.target)"
+          />
         </td>
       </tr>
     </tbody>
@@ -516,8 +526,7 @@
         <td>
           <div class="dropdown">
             <select class="dropdown-select" value="{{ crystal.target }}" (change)="changeCrystalTarget(index, $event.target)">
-              <option value=""></option>
-              <option value="0">Instantannée</option>
+              <option value="0">Instantanée</option>
               <option value="1">Une scène</option>
               <option value="2">Une journée</option>
               <option value="3">Illimitée</option>
@@ -527,7 +536,6 @@
         <td>
           <div class="dropdown">
             <select class="dropdown-select" value="{{ crystal.time }}" (change)="changeCrystalTime(index, $event.target)">
-              <option value=""></option>
               <option value="0">Personnelle</option>
               <option value="1">Toucher</option>
               <option value="2">A vue</option>
